welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:3: error: ')' expected but '<-' found.
  if(i<- 0 to nums.length-1){
      ^maxValue:7: error: illegal start of simple expression
} 
^