welcome.lessons.welcome.array.search.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
  var max:Int=0
  if(i<- 0 to nums.length-1){
    if(nums(i)>max){max=nums(i)}
  }
  return(max)
}